--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-	<meta property="og:image" content="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/victoria-cover.jpg">
+	<meta property="og:image" content="https://s3-us-west-2.amazonaws.com/victoria.bodiewebdesign.com/Images/victoria-cover.jpg">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
